--- a/Index.html
+++ b/Index.html
@@ -350,10 +350,10 @@
                         or just say hello — feel free to reach out.
                     </p>
                     <div class="contact-methods">
-                        <a href="mailto:leopold@example.com" class="contact-method">📧 leopordbonfils@gmail.com</a>
-                        <a href="tel:+250700000000" class="contact-method">📞 +250 784 403 935</a>
-                        <a href="https://www.linkedin.com/in/leopoldmugisha" class="contact-method" target="_blank">🔗 LinkedIn</a>
-                        <a href="https://github.com/leopoldmugisha" class="contact-method" target="_blank">💻 GitHub</a>
+                        <a href="mailto:leopordbonfils@gmail.com" class="contact-method">📧 leopordbonfils@gmail.com</a>
+                        <a href="tel:+250784403935" class="contact-method">📞 +250 784 403 935</a>
+                        <a href="https://www.linkedin.com/in/mugisha-leopord-bonfils-79b51a252/" class="contact-method" target="_blank">🔗 LinkedIn</a>
+                        <a href="https://github.com/leopoldbonfils" class="contact-method" target="_blank">💻 GitHub</a>
                     </div>
                 </div>
 
@@ -374,7 +374,7 @@
                         </div>
                         <div class="form-actions">
                             <button type="submit" class="btn-submit">Send Message</button>
-                            <button type="reset" class="btn-reset">Reset</button>
+                            
                         </div>
                     </form>
                 </div>
