I add project name

--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
     <section class="hero" id="home">
         <div class="hero-container">
             <div class="hero-content">
-                <div class="hero-greeting">Hello — I'm Leopold.</div>
+                <div class="hero-greeting">Hello  I'm Leopold MUGISHA.</div>
                 <h1 class="hero-title">Leopold Mugisha</h1>
                 <div class="hero-subtitle">Software Engineer • Full-stack • Student</div>
                 <p class="hero-description">
@@ -272,7 +272,7 @@
             <div class="projects-grid">
                 <div class="project-card fade-in">
                     <div class="project-header">
-                        <h3 class="project-title">Disaster Management System</h3>
+                        <h3 class="project-title">Hazard Management System</h3>
                         <p class="project-description">
                             A centralized system for managing disaster data in Rwanda, 
                             focusing on floods in Rubavu district. Includes reporting, 
@@ -286,8 +286,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="#" class="project-link">View Code</a>
-                        <a href="#" class="project-link">Live Demo</a>
+                        <a href="#" class="project-link">View Code</a>                        
                     </div>
                 </div>
 
@@ -312,7 +311,7 @@
 
                 <div class="project-card fade-in">
                     <div class="project-header">
-                        <h3 class="project-title">Nile Movie Website</h3>
+                        <h3 class="project-title">Movie Website</h3>
                         <p class="project-description">
                             A modern movie platform with a blue theme, user-friendly 
                             interface, and service features inspired by Rwanda's 
@@ -327,7 +326,48 @@
                     </div>
                     <div class="project-actions">
                         <a href="#" class="project-link">View Code</a>
-                        <a href="#" class="project-link">Live Demo</a>
+                    </div>
+                </div>
+                <div class="project-card fade-in">
+                    <div class="project-header">
+                        <h3 class="project-title">Online Driver Permit Booking System</h3>
+                        <p class="project-description">
+                            A web application for booking driving permit tests, 
+                            managing user profiles, and scheduling appointments. 
+                            Features a clean design and intuitive navigation.
+                        </p>
+                        <div class="project-tags">
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">JavaScript</span>
+                            <span class="project-tag">PHP</span>
+                        </div>
+                    </div>
+                    <div class="project-actions">
+                        <a href="#" class="project-link">View Code</a>
+                    </div>
+                </div>
+                <div class="project-card fade-in">
+                    <div class="project-header">
+                        <h3 class="project-title">Provisoire-Exam</h3>
+                        <p class="project-description">
+                            Provisoire-Exam is a preparatory test designed to help 
+                            individuals who plan to take the provisional driving license exam 
+                            (permis provisoire) in Rwanda get well prepared. It consists of 
+                            questions similar to those asked in the official exam and 
+                            serves as a practice tool for self-assessment before sitting 
+                            for the government test.
+                        </p>
+                        <div class="project-tags">
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">JavaScript</span>
+                            <span class="project-tag">PHP</span>
+                        </div>
+                    </div>
+                    <div class="project-actions">
+                        <a href="#" class="project-link">View Code</a>
+                        
                     </div>
                 </div>
             </div>
@@ -349,7 +389,7 @@
                     <h3>Get in Touch</h3>
                     <p>
                         Whether you want to collaborate, discuss an idea, 
-                        or just say hello — feel free to reach out.
+                        or just say hello feel free to reach out.
                     </p>
                     <div class="contact-methods">
                         <a href="mailto:leopordbonfils@gmail.com" class="contact-method">📧 leopordbonfils@gmail.com</a>
