Add other project

--- a/Index.html
+++ b/Index.html
@@ -351,18 +351,37 @@
                     <div class="project-header">
                         <h3 class="project-title">Provisoire-Exam</h3>
                         <p class="project-description">
-                            Provisoire-Exam is a preparatory test designed to help 
-                            individuals who plan to take the provisional driving license exam 
-                            (permis provisoire) in Rwanda get well prepared. It consists of 
-                            questions similar to those asked in the official exam and 
-                            serves as a practice tool for self-assessment before sitting 
-                            for the government test.
+                           Provisoire-Exam is a practice test for individuals preparing 
+                           for the provisional driving license exam in Rwanda, featuring 
+                           questions similar to the official exam for self-assessment 
+                           and preparation.
                         </p>
                         <div class="project-tags">
                             <span class="project-tag">HTML</span>
                             <span class="project-tag">CSS</span>
                             <span class="project-tag">JavaScript</span>
                             <span class="project-tag">PHP</span>
+                        </div>
+                    </div>
+                    <div class="project-actions">
+                        <a href="#" class="project-link">View Code</a>
+                        
+                    </div>
+                </div>
+                <div class="project-card fade-in">
+                    <div class="project-header">
+                        <h3 class="project-title">Auca App</h3>
+                        <p class="project-description">
+                            The Auca Intranet App is a platform for AUCA that centralizes academic, 
+                            administrative, and communication services, giving students, staff, 
+                            and lecturers secure access to announcements, schedules, results, 
+                            and resources.
+                        </p>
+                        <div class="project-tags">
+                            <span class="project-tag">React native</span>
+                            <span class="project-tag">Node.js</span>
+                            <span class="project-tag">MySql</span>
+                            <span class="project-tag">Express.js</span>
                         </div>
                     </div>
                     <div class="project-actions">
