--- a/Index.html
+++ b/Index.html
@@ -286,7 +286,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="#" class="project-link">View Code</a>                        
+                        <a href="https://github.com/leopoldbonfils/HazardManagementSystemRMIServer" class="project-link">View Code</a>                        
                     </div>
                 </div>
 
@@ -305,7 +305,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="https://github.com/ericmaniraguha/oracle_sql_employee_management_system" class="project-link">View Code</a>
+                        <a href="https://github.com/leopoldbonfils/oracle_sql_employee_management_system" class="project-link">View Code</a>
                     </div>
                 </div>
 
@@ -325,7 +325,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="#" class="project-link">View Code</a>
+                        <a href="https://github.com/leopoldbonfils/Movie-Script-website" class="project-link">View Code</a>
                     </div>
                 </div>
                 <div class="project-card fade-in">
@@ -344,7 +344,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="#" class="project-link">View Code</a>
+                        <a href="https://github.com/leopoldbonfils/Online-Driver-Permit-Booking-System" class="project-link">View Code</a>
                     </div>
                 </div>
                 <div class="project-card fade-in">
@@ -364,7 +364,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="#" class="project-link">View Code</a>
+                        <a href="https://github.com/leopoldbonfils/Provisoire-Exam" class="project-link">View Code</a>
                         
                     </div>
                 </div>
@@ -385,7 +385,7 @@
                         </div>
                     </div>
                     <div class="project-actions">
-                        <a href="#" class="project-link">View Code</a>
+                        <a href="https://github.com/Danieljospin1/Auca_intranet_app" class="project-link">View Code</a>
                         
                     </div>
                 </div>
@@ -455,7 +455,7 @@
                 © 2025 Leopold Mugisha. Built with 💙 and clean code.
             </p>
             <p>
-                <a href="#" class="resume-link">Download Resume</a>
+                <a href="assets/Leopold MUGISHA CV.pdf" class="resume-link" download="Leopold_Mugisha_CV.pdf">CIRRICULUM VITAE</a>
             </p>
         </div>
     </footer>
