Change name of CV

--- a/Index.html
+++ b/Index.html
@@ -455,7 +455,7 @@
                 © 2025 Leopold Mugisha. Built with 💙 and clean code.
             </p>
             <p>
-                <a href="assets/Leopold MUGISHA CV.pdf" class="resume-link" download="Leopold_Mugisha_CV.pdf">CIRRICULUM VITAE</a>
+                <a href="assets/Leopold MUGISHA CV.pdf" class="resume-link" download="Leopold_Mugisha_CV.pdf">Cirriculum Vitae</a>
             </p>
         </div>
     </footer>
