--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="tech-icon">
-                            <span>🐘</span>
+                            <span>🐍</span>
                             <span>Python</span>
                         </div>
                         <div class="tech-icon">
