--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">LM</div>
+            <div class="logo"></div>
             <ul class="nav-menu">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
