change name of project

--- a/Index.html
+++ b/Index.html
@@ -311,7 +311,7 @@
 
                 <div class="project-card fade-in">
                     <div class="project-header">
-                        <h3 class="project-title">Movie Website</h3>
+                        <h3 class="project-title">FilmNet</h3>
                         <p class="project-description">
                             A modern movie platform with a blue theme, user-friendly 
                             interface, and service features inspired by Rwanda's 
