Change project name

--- a/Index.html
+++ b/Index.html
@@ -349,7 +349,7 @@
                 </div>
                 <div class="project-card fade-in">
                     <div class="project-header">
-                        <h3 class="project-title">Provisoire-Exam</h3>
+                        <h3 class="project-title">ProviExam</h3>
                         <p class="project-description">
                            Provisoire-Exam is a practice test for individuals preparing 
                            for the provisional driving license exam in Rwanda, featuring 
